--- a/KTX/KTX/Views/Shared/_Layout.cshtml
+++ b/KTX/KTX/Views/Shared/_Layout.cshtml
@@ -228,7 +228,7 @@
                             </li>
                         }
                         <li class="sub-menu">
-                            @Html.ActionLink("Quản lý sinh viên", "Index", "QLSVs")
+                            @Html.ActionLink("Quản lý sinh viên", "Index", "QLSV")
                         </li>
                         <li class="sub-menu">
                             @Html.ActionLink("Quản lý phòng", "Index", "Phong")
