--- a/KTX/KTX/Views/Shared/_Layout.cshtml
+++ b/KTX/KTX/Views/Shared/_Layout.cshtml
@@ -237,10 +237,10 @@
                             @Html.ActionLink("Quản lý phòng-sinh viên", "Index", "QLPSV")
                         </li>
                         <li class="sub-menu">
-                            @Html.ActionLink("Quản lý điện", "Index", "QLDs")
+                            @Html.ActionLink("Quản lý điện", "Index", "QLD")
                         </li>
                         <li class="sub-menu">
-                            @Html.ActionLink("Quản lý nước", "Index", "QLNs")
+                            @Html.ActionLink("Quản lý nước", "Index", "QLN")
                         </li>
                         <li class="sub-menu">
                             @Html.ActionLink("Quản lý hóa đơn", "Index", "HoaDon")
